[package]
name = "tokio-tasks"
version = "0.1.2"
edition = "2021"
authors = ["Jakob Truelsen <jakob@scalgo.com>"]
description = "Task managment for tokio"
documentation = "https://docs.rs/tokio-tasks"
keywords = ["taskmanagment"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/antialize/tokio-tasks"

[features]
pause = []

[dependencies]
futures-util = "0.3.25"
tokio = { version = "1.12.0", default_features=false, features = ["sync", "time", "rt"] }
ordered-locks = { version = "0.2.1", optional=true }
lazy_static = "1.4.0"
log = "0.4.17"
