[package]
name = "tokio-tasks"
version = "0.2.1"
edition = "2021"
authors = ["Jakob Truelsen <jakob@scalgo.com>"]
description = "Task managment for tokio"
documentation = "https://docs.rs/tokio-tasks"
keywords = ["taskmanagment"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/antialize/tokio-tasks"

[features]
pause = []
runtoken-id = []

[dependencies]
futures-util = "0.3"
tokio = { version = "1", default_features=false, features = ["sync", "time", "rt"] }
ordered-locks = { version = "0.2", optional=true }
lazy_static = "1.4.0"
log = "0.4"
