[package]
name = "tokio-tasks"
version = "0.2.2"
edition = "2024"
authors = ["Jakob Truelsen <jakob@scalgo.com>"]
description = "Task managment for tokio"
documentation = "https://docs.rs/tokio-tasks"
keywords = ["taskmanagment"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/antialize/tokio-tasks"

[features]
pause = []
runtoken-id = []
magic-location = []

[dependencies]
futures-util = "0.3"
tokio = { version = "1", default-features=false, features = ["sync", "time", "rt"] }
ordered-locks = { version = "0.2", optional=true }
log = "0.4"
